--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,9 +1,8 @@
-.DS_Store
-node_modules
+# Dependencies and compiled output
+node_modules/
 /dist
 
-
-# local env files
+# Local env files
 .env.local
 .env.*.local
 
