--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 # System files
 .DS_Store
 Thumbs.db
+
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
