--- a/argos/Makefile
+++ b/argos/Makefile
@@ -1,2 +1,3 @@
+# TODO: Remove this Makefile once the dev container is setup
 run:
-	docker build . -t argos && x11docker --hostdisplay argos
+	docker build . -t argos && x11docker --hostdisplay -i argos
