--- a/argos/Dockerfile
+++ b/argos/Dockerfile
@@ -17,7 +17,8 @@ RUN apt-get update && apt-get install -y \
     lua5.3 liblua5.3-dev \
     doxygen \
     graphviz graphviz-dev \
-    asciidoc
+    asciidoc \
+    clang-format
 
 # Build ARGoS from source
 RUN git clone https://github.com/MISTLab/argos3.git && \
