--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -1,3 +1,12 @@
+[pylint.MASTER]
+disable=
+    C0114, # missing-module-docstring
+    C0115, # missing-class-docstring
+    C0116, # missing-function-docstring
+
+[pylint.FORMAT]
+max-line-length=140
+
 [yapf]
 based_on_style = pep8
 column_limit = 140
