Remove linting error for TODO comments

--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -8,6 +8,9 @@ disable=
 [pylint.FORMAT]
 max-line-length=140
 
+[pylint.MISCELLANEOUS]
+notes=
+
 [yapf]
 based_on_style = pep8
 column_limit = 140
