Fix pylint variable regex to allow constants inside functions

--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -5,6 +5,9 @@ disable=
     C0116, # missing-function-docstring
     R0903, # too-few-public-methods
 
+[pylint.BASIC]
+variable-rgx=(([a-z_][a-z0-9_]{2,30})|([A-Z_][A-Z0-9_]*)|(__.*__))$
+
 [pylint.FORMAT]
 max-line-length=140
 
