Revert "Merge branch 'integrate-drone-info-to-websockets' into 'master'"
This reverts merge request !13

--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python",
             "type": "python",
             "request": "launch",
-            "module": "server.main",
+            "program": "server/main.py",
             "console": "integratedTerminal"
         }
     ]
