Set C++ version for ARGoS to C++17

--- a/argos/simulation/CMakeLists.txt
+++ b/argos/simulation/CMakeLists.txt
@@ -1,10 +1,12 @@
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.1)
 project(hivexplore_simulation)
+
+set (CMAKE_CXX_STANDARD 17)
 
 if(APPLE)
   option(ASAN "Use Clang Address Sanitizer in Debug builds")
   if(ASAN)
-    # Add address sanitizer support for CLang
+    # Add address sanitizer support for Clang
     set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -fsanitize=address -fno-optimize-sibling-calls -fno-omit-frame-pointer")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address -fno-optimize-sibling-calls -fno-omit-frame-pointer")
     set(CMAKE_MODULE_LINKER_FLAGS_DEBUG "${CMAKE_MODULE_LINKER_FLAGS_DEBUG} -fsanitize=address")
