Enable C++17 for ARGoS simulation

--- a/argos/simulation/controllers/crazyflie/CMakeLists.txt
+++ b/argos/simulation/controllers/crazyflie/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_library(crazyflie SHARED crazyflie.h crazyflie.cpp)
+add_library(crazyflie SHARED
+  crazyflie.h
+  crazyflie.cpp)
+
+target_compile_features(crazyflie PRIVATE cxx_std_17)
+
 target_link_libraries(crazyflie
   argos3core_simulator
   argos3plugin_simulator_crazyflie
