--- a/server/Makefile
+++ b/server/Makefile
@@ -4,7 +4,7 @@ VENV := ../.venv
 
 venv:
 	python3 -m venv $(VENV)
-	$(VENV)/bin/pip install -r requirements.txt
+	$(VENV)/bin/pip install -r requirements/dev.txt
 
 run:
 	python3 -m server.main
