--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -26,8 +26,7 @@ FROM base as prod
 RUN pip3 install -r requirements/prod.txt
 COPY server server
 EXPOSE 5678
-CMD [ "python3", "-m", "server.main", "argos" ]
-# TODO: Provide argument
+ENTRYPOINT [ "python3", "-m", "server.main" ]
 
 # TODO: Fix /tmp/hivexplore volume mount permissions when created with Docker
 # TODO: Run container as non-root user
