Reduce ARGoS production image size from 2.5GB to 500MB using Docker multi-stage build

--- a/argos/Dockerfile
+++ b/argos/Dockerfile
@@ -1,42 +1,53 @@
-# Base stage
-FROM ubuntu:20.04 AS base
+# Common build/runtime dependencies stage
+FROM ubuntu:20.04 AS dependencies
+ARG DEBIAN_FRONTEND=noninteractive
+RUN apt-get update && apt-get install -y \
+    freeglut3 \
+    libfreeimage3 \
+    libfreeimageplus3 \
+    liblua5.3-0 \
+    libxmu6 \
+    qt5-default
+
+# Build stage
+FROM dependencies AS build
 
 ARG DEBIAN_FRONTEND=noninteractive
-
-# Install dependencies
 RUN apt-get update && apt-get install -y \
-    build-essential \
-    git \
-    cmake \
-    sudo \
-    libfreeimage-dev libfreeimageplus-dev \
-    qt5-default \
-    freeglut3-dev \
-    libxi-dev \
-    libxmu-dev \
-    lua5.3 liblua5.3-dev \
-    doxygen \
-    graphviz graphviz-dev \
     asciidoc \
-    clang clang-format
+    build-essential \
+    cmake \
+    doxygen \
+    freeglut3-dev \
+    git \
+    graphviz \
+    graphviz-dev \
+    libfreeimage-dev \
+    libfreeimageplus-dev \
+    liblua5.3-dev \
+    libxi-dev \
+    libxmu-dev
 
 # Build ARGoS from source
 RUN git clone https://github.com/KRMisha/argos3 && \
     cd argos3 && \
-    mkdir build_simulator && cd build_simulator && \
-    cmake -DCMAKE_BUILD_TYPE=Release ../src && \
+    mkdir build && cd build && \
+    cmake -DCMAKE_BUILD_TYPE=Release -DARGOS_INSTALL_LDSOCONF=OFF ../src && \
     make -j$(nproc)
 
 # Install ARGoS
-RUN cd argos3/build_simulator && \
+RUN cd argos3/build && \
     make doc && \
-    make install && \
-    . ./argos_post_install.sh
+    make install
 
+# Base stage
+FROM dependencies AS base
+COPY --from=build /usr/local /usr/local
+RUN echo /usr/local/lib/argos3 > /etc/ld.so.conf.d/argos3.conf && ldconfig
 WORKDIR /hivexplore
 
 # Production stage
-FROM base as prod
+FROM base AS prod
 
 COPY simulation .
 
