--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "core-js": "^3.6.5",
+        "primeflex": "^2.0.0",
         "primeicons": "^4.1.0",
         "primevue": "^3.3.4",
         "three": "^0.126.1",
