Add comment for ARGoS Dockerfile dev container stage

--- a/argos/Dockerfile
+++ b/argos/Dockerfile
@@ -50,7 +50,7 @@ RUN apt-get update && apt-get install -y clang-format
 COPY . .
 RUN clang-format --dry-run -Werror $(find . -name '*.c' -o -name '*.cpp' -o -name '*.h' -o -name '*.inl')
 
-# Simulation build dependencies stage
+# Simulation build dependencies stage (also used for VS Code dev container)
 FROM base AS simulation-build-dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
