--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ format_server:
     services:
         - docker:dind
     script:
+        - cd server
         - docker build --target format -t hivexplore/server .
 
 lint_server:
@@ -41,6 +42,7 @@ lint_client:
     services:
         - docker:dind
     script:
+        - cd client
         - docker build --target lint -t hivexplore/client .
 
 test_client:
@@ -66,6 +68,7 @@ format_drone:
     services:
         - docker:dind
     script:
+        - cd drone
         - docker build --target format -t hivexplore/drone .
 
 build_drone:
@@ -83,6 +86,7 @@ format_argos:
     services:
         - docker:dind
     script:
+        - cd argos
         - docker build --target format -t hivexplore/argos .
 
 build_argos:
